k8s/garage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-rpc
  namespace: garage
spec:
  clusterIP: None
  selector:
    app: garage
  ports:
  - name: rpc
    port: 3901
---
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: garage
spec:
  selector:
    app: garage
  ports:
  - name: s3-api
    port: 3900
